# ROS2_MJC_UR3_new

./: MUJOCO_LOG.TXT  apt_packages_backup.txt  convert.py  frames_2026-04-05_16.16.38.gv  pip_requirements_backup.txt  rosdep_keys_backup.txt  ur3_generated.urdf  ur3_mujoco_direct.launch.py
src/Universal_Robots_ROS2_Description/: .pre-commit-config.yaml  README.md
src/Universal_Robots_ROS2_Description/config/ur3/: joint_limits.yaml
src/Universal_Robots_ROS2_Description/launch/: view_ur.launch.py  view_ur.launch.xml
src/Universal_Robots_ROS2_Description/urdf/: ur3.ros2_control.xacro
src/Universal_Robots_ROS2_Driver/ur_calibration/: COLCON_IGNORE
src/Universal_Robots_ROS2_Driver/ur_moveit_config/config/: kinematics.yaml
src/Universal_Robots_ROS2_Driver/ur_moveit_config/rviz/: view_robot.rviz
src/Universal_Robots_ROS2_Driver/ur_moveit_config/srdf/: ur_macro.srdf.xacro
src/Universal_Robots_ROS2_Driver/ur_robot_driver/: COLCON_IGNORE
src/mujoco_ros2_control/: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  package.xml  update_mujoco_simulate.sh
src/mujoco_ros2_control/.github/workflows/: ci.yaml  format.yml
src/mujoco_ros2_control/docker/: Dockerfile  build.sh  run.sh
src/mujoco_ros2_control/docs/: TOOLS.md
src/mujoco_ros2_control/include/mujoco_ros2_simulation/: data.hpp  mujoco_cameras.hpp  mujoco_lidar.hpp  mujoco_system_interface.hpp  utils.hpp
src/mujoco_ros2_control/src/: mujoco_cameras.cpp  mujoco_system_interface.cpp
src/mujoco_ros2_control/test/: CMakeLists.txt  test_plugin.cpp
src/mujoco_ros2_control/test/config/: controllers.yaml
src/mujoco_ros2_control/test/launch/: test_robot.launch.py
src/mujoco_ros2_control/test/test_resources/: test_inputs.xml  test_robot.xml
src/ur3_mujoco_assets/meshes/: Gripper_base_LED_1.stl  Gripper_base_blue_1.stl  Left_guard_1.stl  Left_in_1.stl  Left_out_1.stl  Left_tip_finger_1.stl  Left_tip_tip_1.stl  QC2_1.stl  Right_guard_link_1.stl  Right_out_1.stl  Right_tip_tip_1.stl  base_link.stl  link1_1_1.stl  link2_1_1.stl  link2_2_1.stl  link2_3_1.stl  link2_4_1.stl  link3_1_1.stl  link3_3_1.stl  link3_4_1.stl  link4_1_1.stl  link4_2_1.stl  link4_3_1.stl  link5_2_1.stl  link6_2_1.stl  table.stl
src/ur3_mujoco_assets/mjcf/: gripper_revise_IK.xml
src/ur3_mujoco_sim/: CMakeLists.txt  package.xml
src/ur3_mujoco_sim/config/: controllers.yaml  fastdds_disable_shm.xml  ur3_controllers.yaml  ur3_joint_trajectory_controller.yaml  ur3_moveit_controllers.yaml
src/ur3_mujoco_sim/launch/: ur3_mujoco.launch.py  ur3_mujoco_moveit.launch.py
src/ur3_mujoco_sim/meshes/: Left_guard_link_1.stl  QC1_1.stl  QC3_1.stl  Right_guard_1.stl  Right_in_1.stl  Right_tip_finger_1.stl  box.stl  cup.stl  cylinder.stl  cylinder_1.stl  cylinder_1_col.stl  cylinder_2_col.stl  cylinder_3.stl  gripper_test.stl  link1_2_1.stl  link1_3_1.stl  link2_5_1.stl  link2_6_1.stl  link2_7_1.stl  link2_8_1.stl  link3_2_1.stl  link3_5_1.stl  link3_6_1.stl  link3_7_1.stl  link5_1_1.stl  link5_3_1.stl  link6_1_1.stl  plate.stl  sphere.stl  square_1.stl  square_1_col.stl  square_2.stl  square_2_col.stl  square_3.stl  table.stl  table_upper.stl  table_upper_col.stl  table_upper_old.stl
src/ur3_mujoco_sim/meshes/UR3/: Base_1.stl  Base_2.stl  Forearm_1.stl  Forearm_2.stl  Forearm_3.stl  Forearm_4.stl  Forearm_5.stl  Forearm_6.stl  Shoulderarm_1.stl  Shoulderarm_2.stl  Shoulderarm_3.stl  Upperarm_1.stl  Upperarm_2.stl  Upperarm_3.stl  Upperarm_4.stl  Upperarm_5.stl  Upperarm_6.stl  Upperarm_7.stl  Upperarm_8.stl  Wrist1_1.stl  Wrist1_2.stl  Wrist1_3.stl  Wrist2_1.stl  Wrist2_2.stl  Wrist2_3.stl  Wrist3_1.stl  Wrist3_2.stl
src/ur3_mujoco_sim/meshes/gripper/: Case_Base.stl  Case_Latch.stl  L_Finger.stl  L_Slider.stl  Module_1_Finger_1.stl  Module_1_Finger_11.stl  Module_1_Finger_2.stl  Module_1_Link_1.stl  Module_1_Link_11.stl  Module_1_Link_2.stl  Module_1_Link_21.stl  Module_1_Plate1.stl  Module_1_Shaft_Insert.stl  Module_1_Shaft_Insert1.stl  R_Finger.stl  R_Slider.stl  Shaft1.stl
src/ur3_mujoco_sim/mjcf/: UR3_RG2.xml  ur3_scene_table.xml
src/ur3_mujoco_sim/urdf/: ur3_mujoco.urdf  ur3_mujoco_fixed.urdf.xacro
src/ur3_pick_task/: package.xml  setup.cfg  setup.py
src/ur3_pick_task/config/actions/: ur3_action_sequence.yaml
src/ur3_pick_task/config/ik/: tcp_ik_solver.yaml
src/ur3_pick_task/ur3_pick_task/: __init__.py  action_sequencer.py  pick_task_script.py  pose_compare_site.py  tcp_ik_solver.py
src/ur3_pick_task/web/pose_compare/: index.html
src/ur3_realsense_bringup/: CMakeLists.txt  package.xml
src/ur3_realsense_bringup/config/: realsense_rgbd.yaml
src/ur3_realsense_bringup/launch/: realsense_rgbd.launch.py
src/ur3_rl_bridge/: package.xml  setup.cfg  setup.py
src/ur3_rl_bridge/config/handeye/: d435i_on_gripper.yaml
src/ur3_rl_bridge/config/tcp/: gripper_tip.yaml
src/ur3_rl_bridge/launch/: rl_camera_preview.launch.py
src/ur3_rl_bridge/ur3_rl_bridge/: handeye_tf_publisher_node.py  mujoco_object_manager_node.py  mujoco_rl_camera_preview_node.py  multi_view_cloud_fusion_node.py  noisy_camera_node.py  ros_gym_env.py  tcp_task_pose_test_node.py  virtual_perception_node.py  yolo_object_preview_node.py
