<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur3_mujoco_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wonny@todo.todo">wonny</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>controller_manager</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>ur3_rl_bridge</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
